--- a/galeria/galeria.css
+++ b/galeria/galeria.css
@@ -6,18 +6,72 @@
   box-sizing: border-box;
 }
 
-.container-wrapper {
-  display: grid;
-  place-content: center;
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
-  background: #98827d;
+.flipbook img {
+  border-style: dashed;
 }
 
-.flipbook {
-  width: 1000px;
-  height: 600px;
+@media (max-width: 767px) {
+  .flipbook {
+    width: auto;
+    height: auto;
+  }
+  .container-wrapper {
+    display: grid;
+    place-content: center;
+    height: auto;
+    width: auto;
+    overflow: hidden;
+    background: #98827d;
+  }
+
+  .flipbook .page {
+    background: white;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.11);
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .flipbook {
+    width: 100%;
+    height: 60%;
+  }
+  .container-wrapper {
+    display: grid;
+    place-content: center;
+    height: 50vh;
+    width: 50vw;
+    overflow: hidden;
+    background: #98827d;
+  }
+}
+
+@media (min-width: 1024px) {
+  .flipbook {
+    width: 1000px;
+    height: 600px;
+  }
+
+  .container-wrapper {
+    display: grid;
+    place-content: center;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    background: #98827d;
+  }
+
+  .flipbook .page {
+    background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.11);
+  }
 }
 
 .flipbook .hard {
@@ -44,16 +98,6 @@
   font-size: 3rem;
   padding: 30%;
   text-align: center;
-}
-
-.flipbook .page {
-  background: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.11);
 }
 
 .page img {
