--- a/historia/historia.css
+++ b/historia/historia.css
@@ -27,7 +27,7 @@
   width: 20px;
   height: 20px;
   right: -10px;
-  background-color: black; /* #fff;*/
+  background-color: var(--cafe-oscuro); /* #fff;*/
   border: 4px solid var(--lavanda); /*#0d6efd;*/
   top: 15px;
   border-radius: 50%;
@@ -49,7 +49,7 @@
   width: 20px;
   height: 20px;
   left: -10px;
-  background-color: red; /* #fff;*/
+  background-color: var(--cafe-oscuro); /* #fff;*/
   border: 4px solid var(--lavanda); /*#0d6efd;*/
   top: 15px;
   border-radius: 50%;
