--- a/anecdotas/anecdotas.css
+++ b/anecdotas/anecdotas.css
@@ -7,7 +7,7 @@
   text-align: center;
   font-size: 2rem;
   margin-bottom: 2rem;
-  color: var(--cafe-oscuro);
+  color: #c2185b;
 }
 
 .anecdota-card {
